--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,33 +1,800 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+/* <style>
+@import url('https://fonts.googleapis.com/css2?family=Pattaya&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Rowdies:wght@300;400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Black+Han+Sans&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Bungee+Shade&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Kalam:wght@300;400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Contrail+One&family=Julius+Sans+One&family=Lemonada:wght@300..700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Pattaya&display=swap");
+</style> */
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+/* import guidelines */
+
+/* .rowdies-light {
+  font-family: "Rowdies", sans-serif;
+  font-weight: 300;
+  font-style: normal;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+.rowdies-regular {
+  font-family: "Rowdies", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.rowdies-bold {
+  font-family: "Rowdies", sans-serif;
+  font-weight: 700;
+  font-style: normal;
+} 
+.black-han-sans-regular {
+  font-family: "Black Han Sans", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+.bungee-shade-regular {
+  font-family: "Bungee Shade", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+.kalam-light {
+  font-family: "Kalam", cursive;
+  font-weight: 300;
+  font-style: normal;
+}
+
+.kalam-regular {
+  font-family: "Kalam", cursive;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.kalam-bold {
+  font-family: "Kalam", cursive;
+  font-weight: 700;
+  font-style: normal;
+}
+.julius-sans-one-regular {
+  font-family: "Julius Sans One", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+.contrail-one-regular {
+  font-family: "Contrail One", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.lemonada-<uniquifier> {
+  font-family: "Lemonada", cursive;
+  font-optical-sizing: auto;
+  font-weight: <weight>;
+  font-style: normal;
+}
+.pattaya-regular {
+  font-family: "Pattaya", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+@import url('https://fonts.googleapis.com/css2?family=Pattaya&display=swap');
+*/
+/* styles.css */
+
+html {
+  scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+  scroll-behavior: smooth;
+}
+/*HERO =================================================================*/
+.Nav_Parent {
+  z-index: 5; /* Ensure the navigation bar is above other elements */
+}
+.H_Nav {
+  position: relative;
+  padding-top: 50px;
+}
+.Nav_Item {
+  transform: rotate(180deg);
+  writing-mode: vertical-rl;
+  font-size: 18px; /* Adjust font size as needed */
+  margin: 50px;
+  font-family: "Rowdies", sans-serif;
+  font-weight: 800;
+  font-style: normal;
+}
+.Hero_Parent {
+  z-index: 4;
+  background-color: #ffecbb;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column; /* Change to column to stack children */
+  /* justify-content: center;  */
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
+.H_Child1 {
+  flex: 1;
+  min-height: 100%;
+  display: flex;
+  flex-direction: row;
+  position: relative; /* Ensure proper positioning of child elements */
+  background-color: #ffc120;
+  padding-bottom: 100px;
+}
+
+.H_Title {
+  flex: 1;
+  position: relative;
+  padding-top: 75px;
+  > div {
+    margin: 50px;
   }
+}
+.H_subtitle {
+  font-family: "Rowdies", sans-serif;
+  font-weight: 800;
+  font-style: normal;
+  font-size: 35px;
+}
+
+.H_Content {
+  display: flex;
+  flex-direction: column;
+  padding-left: 100px;
+}
+.H_name {
+  font-family: "Rowdies", sans-serif;
+  font-weight: 800;
+  font-style: normal;
+  font-size: 70px;
+  line-height: 81px;
+  color: white;
+  letter-spacing: 4px;
+  -webkit-text-stroke-width: 4px;
+  -webkit-text-stroke-color: black; /* WebKit browsers */
+  margin: 30px 0px;
+}
+
+.H_Button {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  background-color: black;
+  border-radius: 30px;
+  max-width: 150px;
+  padding: 8px 10px;
+  > p {
+    font-size: 14px;
+    font-family: "Rowdies", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    color: white;
+    margin-right: 10px;
+  }
+}
+
+.H_Button:hover {
+  > img {
+    transition: transform 0.3s ease; /* Add easing effect */
+    transform: translateX(5px);
+  }
+}
+.H_Button:not(:hover) {
+  > img {
+    transition: transform 0.3s ease; /* Add easing effect */
+    transform: translateX(-5px);
+  }
+}
+.H_Child2 {
+  flex: 1;
+  min-width: 105vw;
+  transform: rotate(-5deg);
+  background-color: #ffc120;
+  padding-bottom: 40px;
+  position: relative;
+  bottom: 100px;
+  right: 15px;
+}
+
+.H_TopRightImage {
+  position: absolute;
+  top: 0;
+  right: 0;
+  /* max-height: px; */
+  max-width: 475px;
+}
+
+.H_BottomLeftImage {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  z-index: 0;
+  height: 600px;
+  width: 250px;
+}
+
+.ModelImage {
+  position: absolute;
+  top: 35px;
+  right: 0px;
+  z-index: 4;
+}
+/* Your other CSS */
+
+.Ribbon_Parent {
+  background-color: black;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  padding: 35px; /* Adjust padding as needed */
+  margin-bottom: 50px;
+}
+.Ribbon_Item {
+  color: white;
+  display: flex;
+  flex-direction: row;
+  align-items: center; /* Align items vertically */
+  > p {
+    font-family: "Pattaya", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 26px;
+    letter-spacing: 2px;
+  }
+}
+
+.Ribbon_Item img {
+  height: 25px; /* Adjust image size as needed */
+  margin-left: 10px; /* Add spacing between text and image */
+}
+
+/* WORK===================================== */
+
+.W_Parent {
+  background-color: #ffc120;
+  display: flex;
+  flex-direction: column;
+}
+.W_Child1 {
+  flex: 1;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+}
+.W_LeftImage {
+  z-index: 1;
+  transform: rotate(-7deg);
+}
+.W_RightImage {
+  transform: scaleX(-1) rotate(-7deg);
+  z-index: 1;
+  /* position: absolute;
+  left:20px; */
+}
+.W_Caption {
+  font-family: "Rowdies", sans-serif;
+  font-weight: 900;
+  font-style: normal;
+  font-size: 45px;
+  z-index: 1000;
+}
+
+.W_Child2 {
+  flex: 1;
+}
+.W_Child3 {
+  flex: 3;
+}
+
+.CT_Parent {
+  display: flex;
+  flex-direction: row;
+  margin: 50px;
+}
+.CT_Child {
+  flex: 1;
+  > img {
+    height: 70px;
+    width: 70px;
+     /* box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3); */
+  }
+}
+
+.CT_Parent {
+  display: flex;
+  flex-direction: row;
+  margin: 50px;
+}
+.CT_Child {
+  flex: 1;
+  > img {
+    height: 70px;
+    width: 70px;
+  }
+}
+.Card_Parent {
+  background-color: white;
+  border-radius: 20px;
+  display: flex;
+  flex-direction: column;
+  min-width: 250px;
+  min-height: 400px;
+  max-width: 250px;
+  max-height: 406px;
+  box-shadow: 4px 10px 2px 1px rgba(0, 0, 0, 0.1);
+}
+.Card_Parent:hover{
+  box-shadow: 6px 14px 4px 2px rgba(0, 0, 0, 0.1);
+}
+.CardC1 {
+  /* flex:1; */
+}
+.CardC2 {
+  flex: 3;
+  display: flex;
+  flex-direction: row;
+  padding: 10px;
+}
+.CardC2_Content {
+  flex: 3;
+  margin-left: 5px;
+  > h3 {
+    font-family: "Rowdies", sans-serif;
+    font-weight: 700;
+    font-style: normal;
+    font-size: 14px;
+  }
+  > p {
+    font-family: sans-serif;
+    font-weight: 200;
+    font-style: normal;
+    font-size: 14px;
+    margin-top: 10px;
+  }
+}
+.features-list {
+  list-style: none;
+  padding: 0;
+}
+
+.features-list li {
+  display: flex;
+  align-items: center;
+  margin-top: 5px;
+  font-size: 13px;
+}
+
+.features-list li img {
+  margin-right: 5px;
+}
+
+.CardC2_Icons {
+  margin-left: 5px;
+  display: flex;
+  flex-direction: column;
+
+  > div {
+    display: flex;
+    align-items: center;
+    align-self: flex-end;
+    justify-content: center;
+    flex-direction: column;
+    > img {
+      height: 30px;
+      width: 30px;
+    }
+  }
+}
+.Icons {
+  flex: 1;
+  > img {
+    height: 30px;
+    width: 30px;
+    flex: 1;
+    background-color: black;
+    border-radius: 50%;
+    max-width: 30px;
+    max-height: 30px;
+    /* object-fit: contain; */
+    height: 30px;
+    width: 30px;
+  }
+}
+
+.Addtional {
+  flex: 1;
+  > img {
+    border-radius: 50%;
+    max-width: 30px;
+    max-height: 30px;
+    margin-top: 10px;
+  }
+}
+/* ======================== */
+.FC_Parent {
+  display: flex;
+  flex-direction: column;
+  margin: 0px 50px 50px 50px;
+  padding-top: 50px;
+}
+
+.FC_Filter_Parent {
+  flex: 1;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  /* margin: auto; */
+  justify-content: space-between;
+}
+
+.FC_Carousel {
+  position: relative;
+  overflow: hidden;
+  margin-top: 100px;
+}
+
+.FC_CardContainer {
+  display: flex;
+  transition: opacity 1s ease-in-out,transform 0.5s ease;
+}
+
+.FC_Card {
+  flex: 0 0 25%;
+  opacity: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+
+.FC_Card.active {
+  opacity: 1;
+}
+
+.FC_PrevBtn {
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  margin-top: 50px;
+}
+.FC_NextBtn {
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+}
+
+.FC_ButtonContainer {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between; /* Align items to the right */
+}
+
+.FC_PrevBtn {
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  margin-top: 50px;
+  align-self: flex-start;
+}
+
+.FC_NextBtn {
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  align-self: flex-end; /* Align the Next button to the right */
+}
+
+/* .FC_Child {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  position: relative;
+  > img {
+    height: 150px;
+    width: 150px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+  }
+  > p {
+    margin: 0;
+    padding: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    font-family: "Rowdies", sans-serif;
+    font-weight: 900;
+    font-style: normal;
+  }
+} */
+.FC_Child {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  position: relative;
+  
+  > img {
+    height: 150px;
+    width: 150px;
+    min-height: 150px;
+    min-width: 150px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    /* box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3); */
+    animation: rotateAnimation 5s linear infinite;
+  }
+  > p {
+    margin: 0;
+    padding: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    font-family: "Rowdies", sans-serif;
+    font-weight: 900;
+    font-style: normal;
+  }
+}
+
+@keyframes rotateAnimation {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+/* ABOUT===========================================*/
+.A_Parent {
+  display: flex;
+  flex-direction: column;
+  background-color: #ffecbb;
+  padding: 50px;
+  position: relative;
+  z-index: 1;
+}
+.A_Title {
+  flex: 1;
+  margin-bottom: 50px;
+  > h1 {
+    font-family: "Rowdies", sans-serif;
+    font-weight: 600;
+    font-style: normal;
+    font-size: 50px;
+    letter-spacing: 4px;
+    z-index: 1000;
+    position: absolute;
+    top: 50px;
+    left: 90px;
+  }
+  > img {
+    transform: rotate(5deg);
+    max-width: 375px;
+    z-index: 0;
+  }
+}
+.A_Body {
+  flex: 3;
+  display: flex;
+  flex-direction: row;
+}
+.A_B_left {
+  flex: 3;
+  display: flex;
+  flex-direction: column;
+  font-family: "Rowdies", sans-serif;
+  font-weight: 100;
+  opacity: 75%;
+  font-style: normal;
+  font-size: 18px;
+  margin-right: 25px;
+}
+.A_B_right {
+  flex: 5;
+}
+.A_B_L_me {
+  flex: 1;
+  text-align: justify;
+  margin-bottom: 25px;
+}
+.A_B_L_tech {
+  flex: 1;
+  text-align: justify;
+}
+
+.TL_Parent {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 50px;
+  font-size: 16px;
+  font-family: "Rowdies", sans-serif;
+  font-weight: 700;
+  font-style: normal;
+  letter-spacing: 11%;
+}
+
+.TL_Date {
+  flex: 1;
+  text-align: right; /* Align contents to the right */
+}
+
+.TL_Icon {
+  margin: 0px 30px;
+  > img {
+    height: 30px;
+    width: 30px;
+  }
+}
+
+.TL_Desp {
+  flex: 2;
+  text-align: left; /* Align contents to the left */
+}
+
+/* FOOTER==================================== */
+.F_Parent {
+  display: flex;
+  flex-direction: column;
+  background-color: #ffecbb;
+  padding: 25px 25px 10px 25px;
+}
+
+.F_Row1_Parent1 {
+  display: flex;
+  flex-direction: row;
+  flex: 3;
+}
+
+.F_Row1_Child1 {
+  flex: 3;
+  display: flex;
+  flex-direction: column;
+  > p {
+    font-family: "Rowdies", sans-serif;
+    font-weight: 700;
+    font-style: normal;
+    font-size: 14px;
+  }
+}
+.FooterCaption {
+  flex: 1;
+  display: flex;
+  justify-content: center; /* Horizontally center the content */
+  align-items: center; /* Vertically center the content */
+}
+
+#Big {
+  font-family: "Bungee Shade", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 75px;
+  letter-spacing: 10px;
+  /* margin-left:25px;
+  margin-top:25px; */
+  margin: 0;
+}
+
+.F_Row1_Child2 {
+  flex: 2;
+  position: relative;
+  display: flex;
+}
+.ReachOut {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+}
+
+.Reach {
+  position: relative;
+  flex: 2;
+  > h2 {
+    position: absolute;
+    top: 15px;
+    left: 10px;
+    font-family: "Rowdies", sans-serif;
+    font-weight: 900;
+    font-style: normal;
+    font-size: 40px;
+    letter-spacing: 11%;
+  }
+  > img {
+    transform: rotate(4deg);
+  }
+}
+
+.EmailContainer {
+  flex: 1;
+  > h4 {
+    font-family: "Rowdies", sans-serif;
+    font-weight: 700;
+    font-style: normal;
+    font-size: 22px;
+  }
+}
+.resume-container {
+  flex: 1;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  > h4 {
+    font-family: "Rowdies", sans-serif;
+    font-weight: 700;
+    font-style: normal;
+    font-size: 22px;
+    flex: 1;
+  }
+}
+
+.resume-image {
+  margin-right: 10px; /* Adjust as needed */
+  width: 20px; /* Adjust as needed */
+  height: auto; /* Maintain aspect ratio */
+}
+
+.cr-image {
+  margin-right: 10px; /* Adjust as needed */
+  width: 20px; /* Adjust as needed */
+  height: auto; /* Maintain aspect ratio */
+}
+
+.F_Row1_Child3 {
+}
+
+.F_Row1_Parent2 {
+  text-align: center;
+  flex: 1;
+  margin-top: 25px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  > p {
+    font-family: "Rowdies", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+  }
+}
+
+.SocialParent {
+  display: flex;
+  flex-direction: column;
+  justify-content: right;
+}
+.SocialChild {
+  flex: 1;
+  margin: 10px;
+}
+
+/* ================== */
+.fade-in {
+  opacity: 1;
+  /* transition: opacity 0.5s ease-in; */
+}
+
+.fade-out {
+  opacity: 0;
+  /* transition: opacity 0.5s ease-out; */
 }
