--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -211,6 +211,7 @@ body {
   right: 0;
   /* max-height: px; */
   max-width: 475px;
+  min-height: 750px
 }
 
 .H_BottomLeftImage {
@@ -224,9 +225,11 @@ body {
 
 .ModelImage {
   position: absolute;
-  top: 35px;
+  /* bottom:0px; */
+  top:0px;
   right: 0px;
   z-index: 4;
+  /* height: 0px; */
 }
 /* Your other CSS */
 
