--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -150,6 +150,7 @@ body {
   display: flex;
   flex-direction: column;
   padding-left: 100px;
+  z-index: 1;
 }
 .H_name {
   font-family: "Rowdies", sans-serif;
@@ -204,14 +205,13 @@ body {
   bottom: 100px;
   right: 15px;
 }
-
 .H_TopRightImage {
   position: absolute;
   top: 0;
   right: 0;
-  /* max-height: px; */
+  z-index: 0; /* Set z-index to position it behind the content */
   max-width: 475px;
-  min-height: 750px
+  min-height: 750px;
 }
 
 .H_BottomLeftImage {
@@ -226,7 +226,7 @@ body {
 .ModelImage {
   position: absolute;
   /* bottom:0px; */
-  top:0px;
+  top: 0px;
   right: 0px;
   z-index: 4;
   /* height: 0px; */
@@ -302,42 +302,33 @@ body {
 
 .CT_Parent {
   display: flex;
-  flex-direction: row;
+  flex-wrap: wrap; /* Allow items to wrap to the next row */
+  justify-content: center; /* Center items horizontally */
   margin: 50px;
-}
-.CT_Child {
-  flex: 1;
-  > img {
-    height: 70px;
-    width: 70px;
-     /* box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3); */
-  }
 }
 
-.CT_Parent {
-  display: flex;
-  flex-direction: row;
-  margin: 50px;
-}
 .CT_Child {
-  flex: 1;
-  > img {
-    height: 70px;
-    width: 70px;
-  }
+  margin: 10px;
+  flex-shrink: 0;
 }
+
+.CT_Child img {
+  height: 70px;
+  width: 70px;
+}
+
 .Card_Parent {
   background-color: white;
   border-radius: 20px;
   display: flex;
   flex-direction: column;
-  min-width: 250px;
+  min-width: 200px;
   min-height: 400px;
   max-width: 250px;
   max-height: 406px;
   box-shadow: 4px 10px 2px 1px rgba(0, 0, 0, 0.1);
 }
-.Card_Parent:hover{
+.Card_Parent:hover {
   box-shadow: 6px 14px 4px 2px rgba(0, 0, 0, 0.1);
 }
 .CardC1 {
@@ -433,23 +424,23 @@ body {
 }
 
 .FC_Filter_Parent {
-  flex: 1;
   width: 100%;
   display: flex;
-  flex-direction: row;
-  /* margin: auto; */
+  flex-wrap: wrap; /* Allow items to wrap to the next row */
   justify-content: space-between;
+  margin-bottom: 20px;
+  justify-content: center;
 }
 
 .FC_Carousel {
   position: relative;
   overflow: hidden;
-  margin-top: 100px;
+  margin: 100px 15px 0px 15px;
 }
 
 .FC_CardContainer {
   display: flex;
-  transition: opacity 1s ease-in-out,transform 0.5s ease;
+  transition: opacity 1s ease-in-out, transform 0.5s ease;
 }
 
 .FC_Card {
@@ -459,7 +450,6 @@ body {
   justify-content: center;
   align-items: center;
 }
-
 
 .FC_Card.active {
   opacity: 1;
@@ -498,40 +488,14 @@ body {
   align-self: flex-end; /* Align the Next button to the right */
 }
 
-/* .FC_Child {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
-  position: relative;
-  > img {
-    height: 150px;
-    width: 150px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-  }
-  > p {
-    margin: 0;
-    padding: 0;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: white;
-    font-family: "Rowdies", sans-serif;
-    font-weight: 900;
-    font-style: normal;
-  }
-} */
 .FC_Child {
   display: flex;
   flex-direction: column;
   align-items: center;
   text-align: center;
   position: relative;
-  
+  flex-shrink: 0; /* Prevent children from shrinking */
+  margin: 0px 25px 10px 25px;
   > img {
     height: 150px;
     width: 150px;
@@ -684,8 +648,8 @@ body {
 .FooterCaption {
   flex: 1;
   display: flex;
-  justify-content: center; /* Horizontally center the content */
-  align-items: center; /* Vertically center the content */
+  justify-content: center;
+  align-items: center;
 }
 
 #Big {
@@ -696,7 +660,7 @@ body {
   letter-spacing: 10px;
   /* margin-left:25px;
   margin-top:25px; */
-  margin: 0;
+  margin: 0 25px 0 0;
 }
 
 .F_Row1_Child2 {
@@ -785,6 +749,7 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: right;
+  margin-left: 25px;
 }
 .SocialChild {
   flex: 1;
@@ -801,3 +766,224 @@ body {
   opacity: 0;
   /* transition: opacity 0.5s ease-out; */
 }
+
+@media screen and (max-width: 825px) {
+  .F_Row1_Parent1 {
+    flex-direction: column; /* Change to column layout on smaller screens */
+  }
+  .F_Row1_Child3 {
+    align-items: center;
+  }
+  .SocialParent {
+    flex-direction: row;
+  }
+  .FooterCaption {
+    text-align: center;
+  }
+  .Reach {
+    display: none;
+  }
+  .ReachOut {
+    align-items: center;
+  }
+  .W_Child1 {
+    text-align: center;
+  }
+  .W_Caption {
+    text-align: center;
+    font-size: 30px;
+  }
+  .EmailContainer {
+    margin-top: 25px;
+  }
+}
+
+@media screen and (max-width: 1140px) {
+  .W_Caption {
+    text-align: center;
+  }
+  .W_Child1 {
+    text-align: center;
+  }
+  .Reach {
+    > h2 {
+      font-size: 32px;
+    }
+  }
+
+
+}
+
+@media screen and (max-width: 500px) {
+  .W_Caption {
+    text-align: center;
+  }
+  .W_Child1 {
+    text-align: center;
+  }
+}
+
+@media screen and (max-width: 1200px) {
+  .FC_Card {
+    flex: 0 0 33.33%; /* Display 3 cards per row */
+  }
+}
+
+@media screen and (max-width: 950px) {
+  .FC_Card {
+    flex: 0 0 50%; /* Display 3 cards per row */
+  }
+}
+
+@media screen and (max-width: 670px) {
+  .FC_Card {
+    flex: 0 0 100%; /* Display 3 cards per row */
+  }
+}
+
+@media screen and (max-width: 850px) {
+  .A_B_L_me {
+    > p {
+      font-size: 16px;
+    }
+  }
+  .A_B_L_tech {
+    > p {
+      font-size: 16px;
+    }
+  }
+  .TL_Parent {
+    font-size: 14px;
+    font-weight: 600;
+  }
+  .TL_Icon {
+    /* display: none; */
+    > img {
+      height: 20px;
+      width: 20px;
+    }
+  }
+}
+@media screen and (max-width: 600px) {
+  .A_B_L_me {
+    > p {
+      font-size: 16px;
+    }
+  }
+  .A_B_L_tech {
+    > p {
+      font-size: 16px;
+    }
+  }
+  .TL_Icon {
+    display: none;
+    > img {
+      height: 20px;
+      width: 20px;
+    }
+  }
+  .TL_Parent {
+    font-size: 12px;
+  }
+  .TL_Date {
+    margin-right: 15px;
+  }
+}
+
+@media screen and (max-width: 1200px) {
+  .H_TopRightImage {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 900px) {
+  .H_Content {
+    padding: 0;
+  }
+}
+
+@media screen and (max-width: 750px) {
+  .H_name {
+    font-size: 55px;
+    font-family: "Rowdies", sans-serif;
+    font-weight: 800;
+    font-style: normal;
+    font-size: 50px;
+    line-height: 65px;
+    color: white;
+    letter-spacing: 4px;
+    -webkit-text-stroke-width: 3px;
+    -webkit-text-stroke-color: black; /* WebKit browsers */
+    margin: 30px 0px;
+  }
+}
+
+
+@media screen and (max-width: 610px) {
+  .H_subtitle{
+    font-size: 25px;
+  }
+  .H_name {
+    font-size: 55px;
+    font-family: "Rowdies", sans-serif;
+    font-weight: 600;
+    font-style: normal;
+    font-size: 45px;
+    line-height: 65px;
+    color: white;
+    letter-spacing: 4px;
+    -webkit-text-stroke-width: 3px;
+    -webkit-text-stroke-color: black; /* WebKit browsers */
+    margin: 30px 0px;
+  }
+  .H_Title {
+    flex: 1;
+    position: relative;
+    padding-top: 75px;
+    > div {
+      margin: 50px 15px;
+    }
+  }
+  .Nav_Item {
+    font-size: 16px;
+    margin: 25px;
+  }
+}
+
+
+@media screen and (max-width: 1140px) {
+  .Ribbon_Parent {
+    padding: 25px;
+    margin-bottom: 25px;
+  }
+  .Ribbon_Item {
+    > p {
+      font-weight: 400;
+      font-size: 20px;
+      letter-spacing: 2px;
+    }
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .Ribbon_Parent {
+    padding: 25px;
+    margin-bottom: 25px;
+  }
+  .Ribbon_Item {
+    align-items: center;
+    text-align: center;
+    > p {
+      font-family: "Rowdies", sans-serif;
+      font-weight: 400;
+      font-size: 14px;
+      letter-spacing: 2px;
+    }
+    >img{
+      height: 15px;
+      width: 15px;
+      margin-right: 15px;
+    }
+  }
+}
+
