--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -327,12 +327,20 @@ body {
   max-width: 250px;
   max-height: 406px;
   box-shadow: 4px 10px 2px 1px rgba(0, 0, 0, 0.1);
+
 }
 .Card_Parent:hover {
   box-shadow: 6px 14px 4px 2px rgba(0, 0, 0, 0.1);
 }
 .CardC1 {
   /* flex:1; */
+
+  >img{
+  height: 150px ;
+  width: 100%;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
+  }
 }
 .CardC2 {
   flex: 3;
